--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -54,6 +54,7 @@ jobs:
           #
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
+          github-token: ${{ secrets.PAGES_DEPLOYMENT}}
       - name: Restore cache 💾
         uses: actions/cache@v3
         with:
@@ -71,18 +72,23 @@ jobs:
       - name: Static HTML export with Next.js 🥯
         run: ${{ steps.detect-package-manager.outputs.runner }} next export
       - name: Upload artifact ⛱️
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
+          name: out
           path: ./out
 
   # Deployment job
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Download artifact ⬇️
+        uses: actions/download-artifact@v2
+        with:
+          name: out
+          path: ./out
       - name: Deploy to GitHub Pages 🚀
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          publish-dir: ./out
+          github-token: ${{ secrets.PAGES_DEPLOYMENT }}
