--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,93 +1,37 @@
-name: Publish to GitHub Pages
+name: Node.js CI
 
 on:
   push:
-    branches: ["gh-pages"]
-
-env:
-  NODE_AUTH_TOKEN: ${{ secrets.PAGES_DEPLOYMENT }}
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+    branches: [ gh-pages ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3
-      - name: Detect package manager 👻
-        id: detect-package-manager
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2
+        with:
+          # update the Node version to meet your needs
+          node-version: 17
+          cache: npm
+
+      - name: Build
         run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "::set-output name=manager::yarn"
-            echo "::set-output name=command::install"
-            echo "::set-output name=runner::yarn"
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "::set-output name=manager::npm"
-            echo "::set-output name=command::ci"
-            echo "::set-output name=runner::npx --no-install"
-            exit 0
-          else
-            echo "Unable to determine packager manager"
-            exit 1
-          fi
-      - name: Setup Node 🍉
-        uses: actions/setup-node@v3
-        with:
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
-          node-version: '17'
+          npm ci
+          npm ci
+          npm run build
+          npm run export
+          touch out/.nojekyll
+          npm set-script build "next build"
+          npm set-script export "next export"
 
-      - name: Setup Pages 🔧
-        id: pages
-        uses: actions/configure-pages@v1
+      - name: Deploy
+          # https://github.com/JamesIves/github-pages-deploy-action
+          # This deployment does not use secret tokens and authorization
+          # Unlike 'actions/deploy-pages@v1'
+        uses: JamesIves/github-pages-deploy-action@4.4.0 
         with:
-          # Automatically inject basePath in your Next.js configuration file and disable
-          # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-          #
-          # You may remove this line if you want to manage the configuration yourself.
-          static_site_generator: next
-      - name: Restore cache 💾
-        uses: actions/cache@v3
-        with:
-          path: |
-            .next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      - name: Install dependencies 🥑
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      - name: Build with Next.js 🍄
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
-      - name: Static HTML export with Next.js 🥯
-        run: ${{ steps.detect-package-manager.outputs.runner }} next export
-      - name: Upload artifact ⛱️
-        uses: actions/upload-artifact@v2
-        with:
-          name: out
-          path: ./out
-
-  # Deployment job
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download artifact ⬇️
-        uses: actions/download-artifact@v2
-        with:
-          name: out
-          path: ./out
-      - name: Deploy to GitHub Pages 🚀
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          publish-dir: ./out
-          github-token: ${{ secrets.PAGES_DEPLOYMENT }}
+          branch: gh-pages
+          folder: out
