--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,7 +31,7 @@ jobs:
           # https://github.com/JamesIves/github-pages-deploy-action
           # This deployment does not use secret tokens and authorization
           # Unlike 'actions/deploy-pages@v1'
-        uses: JamesIves/github-pages-deploy-action@4.4.0 
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: out
