--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,8 +28,11 @@ jobs:
 
       - name: Deploy
         # Use peaceiris/actions-gh-pages action for deployment
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          folder: out
+          # The GitHub token to authenticate the deployment
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./out
           # If your deployment branch is different, update it here
-          branch: gh-pages-deployment
+          publish_branch: gh-pages-deployment
+          allow_empty_commit: true
