--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           # The GitHub token to authenticate the deployment
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAGES_DEPLOYMENT }}
           publish_dir: ./out
           # If your deployment branch is different, update it here
           publish_branch: gh-pages-deployment
