Simplifying yml file

--- a/.github/workflows/build-and-deployment.yml
+++ b/.github/workflows/build-and-deployment.yml
@@ -20,32 +20,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Detect package manager 👻
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "::set-output name=manager::yarn"
-            echo "::set-output name=command::install"
-            echo "::set-output name=runner::yarn"
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "::set-output name=manager::npm"
-            echo "::set-output name=command::ci"
-            echo "::set-output name=runner::npx --no-install"
-            exit 0
-          else
-            echo "Unable to determine packager manager"
-            exit 1
-          fi
-      - name: Setup Node 🍉
+      - name: Setup Node 
         uses: actions/setup-node@v3
         with:
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          cache: npm
           node-version: '16.10.0'
 
-      - name: Setup Pages 🔧
+      - name: Setup Pages 
         id: pages
         uses: actions/configure-pages@v1
         with:
@@ -54,7 +37,7 @@ jobs:
           #
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
-      - name: Restore cache 💾
+      - name: Restore cache 
         uses: actions/cache@v3
         with:
           path: |
@@ -64,13 +47,13 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      - name: Install dependencies 🥑
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      - name: Build with Next.js 🍄
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
-      - name: Static HTML export with Next.js 🥯
-        run: ${{ steps.detect-package-manager.outputs.runner }} next export
-      - name: Upload artifact ⛱️
+      - name: Install dependencies 
+        run: npm ci
+      - name: Build with Next.js 
+        run: npx --no-install next build
+      - name: Static HTML export with Next.js 
+        run: npx --no-install next export
+      - name: Upload artifact 
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./out
