--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,36 +1,79 @@
-name: Node.js CI
+name: Publish to GitHub Pages with Docker
 
 on:
   push:
-    branches: [ main ]
+    branches: ["main"]
+
+env:
+  NODE_AUTH_TOKEN: ${{ secrets.PAGES_DEPLOYMENT }}
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    container: node:16 # Use the desired Docker image with Node.js pre-installed
 
     steps:
-      # https://github.com/actions/checkout
-      - uses: actions/checkout@v3
-        
-      # a standard step for GitHub actions on Node
-      # https://github.com/actions/setup-node
-      - uses: actions/setup-node@v3
-        with:
-          # update the Node version to meet your needs
-          node-version: 16
-          cache: npm
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
-      - name: Build
+      - name: Detect package manager 👻
+        id: detect-package-manager
         run: |
-          npm ci
-          npm run build
-          npm run export
-          touch out/.nojekyll
+          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+            echo "::set-output name=manager::yarn"
+            echo "::set-output name=command::install"
+            echo "::set-output name=runner::yarn"
+            exit 0
+          elif [ -f "${{ github.workspace }}/package.json" ]; then
+            echo "::set-output name=manager::npm"
+            echo "::set-output name=command::ci"
+            echo "::set-output name=runner::npx --no-install"
+            exit 0
+          else
+            echo "Unable to determine packager manager"
+            exit 1
+          fi
 
-      - name: Deploy
-        # https://github.com/JamesIves/github-pages-deploy-action
-        uses: JamesIves/github-pages-deploy-action@v4
+      # Add any additional steps here to set up your Docker environment if needed
+      # For example, you can pull a custom Docker image or build one locally.
+
+      - name: Build with Next.js 🍄
+        run: |
+          docker run --rm \
+            -v "${PWD}:/app" \
+            -w "/app" \
+            ${{ steps.detect-package-manager.outputs.runner }} next build
+
+      - name: Static HTML export with Next.js 🥯
+        run: |
+          docker run --rm \
+            -v "${PWD}:/app" \
+            -w "/app" \
+            ${{ steps.detect-package-manager.outputs.runner }} next export
+
+      - name: Upload artifact ⛱️
+        uses: actions/upload-artifact@v2
         with:
-          branch: gh-pages
-          folder: out
+          name: exported-files
+          path: ./out
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages 🚀
+        id: deployment
+        uses: actions/deploy-pages@v1
