--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Publish to GitHub Pages with Docker
+name: Publish to GitHub Pages
 
 on:
   push:
@@ -19,51 +19,36 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: node:16 # Use the desired Docker image with Node.js pre-installed
-
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Detect package manager 👻
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "::set-output name=manager::yarn"
-            echo "::set-output name=command::install"
-            echo "::set-output name=runner::yarn"
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "::set-output name=manager::npm"
-            echo "::set-output name=command::ci"
-            echo "::set-output name=runner::npx --no-install"
-            exit 0
-          else
-            echo "Unable to determine packager manager"
-            exit 1
-          fi
+      - name: Setup Node 
+        uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: '16.10.0'
 
-      # Add any additional steps here to set up your Docker environment if needed
-      # For example, you can pull a custom Docker image or build one locally.
+      - name: Install dependencies 
+        run: npm ci
 
-      - name: Build with Next.js 🍄
-        run: |
-          docker run --rm \
-            -v "${PWD}:/app" \
-            -w "/app" \
-            ${{ steps.detect-package-manager.outputs.runner }} next build
+      - name: Build with Next.js 
+        run: npx --no-install next build
 
-      - name: Static HTML export with Next.js 🥯
-        run: |
-          docker run --rm \
-            -v "${PWD}:/app" \
-            -w "/app" \
-            ${{ steps.detect-package-manager.outputs.runner }} next export
+      - name: Static HTML export with Next.js 
+        run: npx --no-install next export
 
-      - name: Upload artifact ⛱️
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          push: true
+          tags: your-docker-registry/your-image-name:latest
+
+      - name: Upload artifact 
         uses: actions/upload-artifact@v2
         with:
-          name: exported-files
+          name: out
           path: ./out
 
   # Deployment job
