--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,36 +1,77 @@
-name: Node.js CI
+name: Publish to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: ["main"]
+
+env:
+  NODE_AUTH_TOKEN: ${{ secrets.PAGES_DEPLOYMENT }}
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-      # https://github.com/actions/checkout
-      - uses: actions/checkout@v3
-        
-      # a standard step for GitHub actions on Node
-      # https://github.com/actions/setup-node
-      - uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node 
+        uses: actions/setup-node@v3
         with:
-          # update the Node version to meet your needs
-          node-version: 16
           cache: npm
+          node-version: '16.10.0'
 
-      - name: Build
+      - name: Install dependencies 
+        run: npm ci
+
+      - name: Build with Next.js 
+        run: npx --no-install next build
+
+      - name: Static HTML export with Next.js 
+        run: npx --no-install next export
+
+      - name: Login to Docker
+        env: 
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          npm ci
-          npm run build
-          npm run export
-          touch out/.nojekyll
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag weidak/weidak.github.io:${{ github.sha }}
 
-      - name: Deploy
-        # https://github.com/JamesIves/github-pages-deploy-action
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Push the Docker image
+        run: docker push weidak/weidak.github.io:${{ github.sha }}
+
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     context: ./
+      #     push: true
+      #     tags: your-docker-registry/your-image-name:latest
+
+      - name: Upload artifact 
+        uses: actions/upload-artifact@v2
         with:
-          branch: gh-pages
-          folder: out
+          name: out
+          path: ./out
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages 🚀
+        id: deployment
+        uses: actions/deploy-pages@v1
