--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,12 +1,10 @@
 # This serves as a placeholder template for container-hosting services instead of github pages. 
 
-# CAN BE IGNORED
-
 name: Build and deploy using Docker 
 
 on:
   push:
-    branches: []
+    branches: ["docker"]
 
 env:
   NODE_AUTH_TOKEN: ${{ secrets.PAGES_DEPLOYMENT }}
